# CP_scoreboard

./: .gitignore  Cargo.toml
src/: api.rs  error.rs  fake_term.rs  main.rs  meta.rs  scoreboard.rs
